--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'java'
     id 'groovy' // this one is also necessary
+    id "org.kordamp.gradle.errorprone" version "0.47.0"
 }
 
 group 'com.aor.refactoring'
